19990912-20:45 GMT+1 Victor Szel <info@szelvesz.hu>

  * source/rtl/memvars.c
    ! __MVSAVE() will no longer try to save memvars with longer filename than
      10 character, the Clipper maximum.

  * tests/working/memfile.prg
    tests/working/Makefile
    + .MEM file save/restore test program added, it's a simple test and doesn't
      yet checks for every aspects of the topic.

  * funclist.txt
    + __MSAVE()/__MRESTORE() marked Ready.

19990912-20:30 GMT+1 Victor Szel <info@szelvesz.hu>

  * source/rtl/memvars.c
    + __MVSAVE()/__MVRESTORE() .MEM file saving and restoring support added, 
      Clipper compatible, with extensions to __MVRESTORE() to only restore
      varnames with a specified mask.

  * source/rtl/itemapi.c
    include/itemapi.h
    + hb_itemPutDL() added to set a date directly with a Julian date value.

  * source/rtl/filesys.c
    ! hb_fsIsDrv() fixed bug when the original drive is not restored.
      Thanks go to Jose Lalin for finding this.

  * tests/working/statinit.prg
    + More meaningful messages are printed.

  * source/rtl/extend.c
    ! hb_parcsiz() now only works for parameters passed by reference, just like
      in CA-Cl*pper.

19990912-15:45 GMT+2 Ryszard Glab <rglab@imid.med.pl>

    *include/errorapi.h
    *source/rtl/errorapi.c
        * all hb_errRT*() functions return error code returned by
        hb_errLaunch
        * separated generic runtime error creation from error launching

    *include/extend.h
    *source/rtl/strings.c
        + added hb_strncpyUpper( char *pDest, char *pSource, ULONG ulLen )
        function to copy and convert to uppercase in one operation

    *source/rdd/dbcmd.c
        * functions that select workarea can now retry the select operation
        in case of error (the user code can open a missing database in a
        custom error handler)

    *source/vm/hvm.c
	*added substitution possibility in case of invalid alias value
    
    *tests/working/rtl_test.prg